--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'orange_native' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNSecureKeyStore', :path => '../node_modules/react-native-secure-key-store'
+
   target 'orange_nativeTests' do
     inherit! :complete
     # Pods for testing
