--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -207,6 +207,9 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    // Added to make webrtc work
+    // implementation project(':WebRTCModule') // No longer needed due to autolinking
 }
 
 // Run this once to be able to run the application with BUCK
