--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,13 +6,17 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 29
         targetSdkVersion = 29
+//        compileSdkVersion 27          // might need to switch to this to make webrtc work
+//        buildToolsVersion '27.0.3'
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.3")
+        //classpath("com.android.tools.build:gradle:3.5.3")
+
+        classpath 'com.android.tools.build:gradle:3.4.1' // to make webrtc work might need 3.0.1
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
