--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "react-native-awesome-alerts": "^1.3.0",
+    "react-native-incall-manager": "3.2.7",
+    "react-native-simple-toast": "^1.0.0",
+    "react-native-sound": "^0.11.0",
+    "react-native-vector-icons": "6.6.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^2.0.16",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.6",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-connectycube": "^3.7.2",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
