--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
-    "react-native-secure-key-store": "^2.0.9"
+    "react-native-secure-key-store": "^2.0.9",
+    "react-native-snackbar": "^2.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
