--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -200,6 +200,9 @@ dependencies {
         exclude group:'com.facebook.flipper'
     }
 
+    implementation project(':WebRTCModule')
+
+
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
