--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "1.7.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.6",
     "@react-navigation/native": "^5.7.3",
@@ -22,7 +23,13 @@
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
     "react-native-secure-key-store": "^2.0.9",
-    "react-native-webrtc": "^1.84.0"
+    "react-native-webrtc": "^1.84.0",
+
+    "react-native-awesome-alerts": "^1.3.0",
+    "react-native-incall-manager": "3.2.7",
+    "react-native-simple-toast": "^1.0.0",
+    "react-native-sound": "^0.11.0",
+    "react-native-vector-icons": "6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
